--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="start"> Start Quiz</button>
+    <div id="start"> Start Quiz</div>
     <div id="quiz">
         <div id="question"> Question</div>
         <div id="timer">
