--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <div class="container">
         <div id="questions-container" class="hide">
             <div id="questions">Question</div>
+            <div id="point">point</div>
+            <div id="Time">time</div>
             <div id="answer-buttons" class="btn-grid">
                 <button class="btn">Answer 1</button>
                 <button class="btn">Answer 2</button>
