--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
     <div class="container">
         <div id="questions-container" class="hide">
             <div id="questions">Question</div>
-            <div id="point">point</div>
-            <div id="Time">time</div>
-            <div id="answer-buttons" class="btn-grid">
+            <div id="Time"></div>
+            <div id="Points"></div>
+         <div id="answer-buttons" class="btn-grid">
                 <button class="btn">Answer 1</button>
                 <button class="btn">Answer 2</button>
                 <button class="btn">Answer 3</button>
                 <button class="btn">Answer 4</button>
             </div>
+
         </div>
         <div class="controls">
             <button id="start-btn" class="start-btn btn" start>Start</button>
-            <button id="next-btn" class="next-btn btn hide">Next</button>
+            <button id="next-btn" class="next-btn btn hide" start>Start</button>
         </div>
     </div>
 </body>
