--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz-Game</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
+    
 </head>
 
 <body>
@@ -15,7 +15,6 @@
         <div id="questions-container" class="hide">
             <div id="questions">Question</div>
             <div id="Time"></div>
-            <div id="Points"></div>
          <div id="answer-buttons" class="btn-grid">
                 <button class="btn">Answer 1</button>
                 <button class="btn">Answer 2</button>
@@ -26,9 +25,10 @@
         </div>
         <div class="controls">
             <button id="start-btn" class="start-btn btn" start>Start</button>
-            <button id="next-btn" class="next-btn btn hide" start>Start</button>
+            <button id="next-btn" class="next-btn btn hide" start>Next</button>
         </div>
     </div>
+<script src="script.js"></script>
 </body>
 
 </html>
