--- a/index.html
+++ b/index.html
@@ -11,23 +11,16 @@
 </head>
 
 <body>
-    <div class="container">
-        <div id="questions-container" class="hide">
-            <div id="questions">Question</div>
-            <div id="Time"></div>
-         <div id="answer-buttons" class="btn-grid">
-                <button class="btn">Answer 1</button>
-                <button class="btn">Answer 2</button>
-                <button class="btn">Answer 3</button>
-                <button class="btn">Answer 4</button>
-            </div>
+   <div id="container">
+       <div id="timeRemaining"></div>
+       <div id="questioncontainer">
+           <h1>Java Quiz Challenge</h1>
+           <p>keep in mind that the quiz is undertime pressure. 10seconds will be penalized each time you answer it wrong.</p>
+           <ul id="choices"></ul>
 
-        </div>
-        <div class="controls">
-            <button id="start-btn" class="start-btn btn" start>Start</button>
-            <button id="next-btn" class="next-btn btn hide" start>Next</button>
-        </div>
-    </div>
+           <button id="start-btn">Start</button>
+       </div>
+   </div>
 <script src="script.js"></script>
 </body>
 
