--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <a href="score.html">See Your Score</a>
    <div id="container">
        <div id="timeRemaining"></div>
        <div id="questioncontainer">
