--- a/score.html
+++ b/score.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>View Your Score</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="container">
@@ -17,5 +18,6 @@
             <button id="Clear" value="clear">Clear Your Score</button>
         </div>
     </div>
+    <script src="score.js"></script>
 </body>
 </html>
