final touch to all three application js.css.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        <div id="timeRemaining"></div>
        <div id="questioncontainer">
            <h1>Java Quiz Challenge</h1>
-           <p>keep in mind that the quiz is undertime pressure. 10seconds will be penalized each time you answer it wrong.</p>
+           <p>keep in mind that the quiz is undertime pressure, 10 seconds will be penalized each time you answer it wrong.</p>
            <ul id="choices"></ul>
 
            <button id="start-btn">Start</button>
